# problem-solving

./: .gitignore  219158  219158.cpp  318-a  326175  339-a  382-a.cpp  41-a  41-a.cpp  443-a  443-a.cpp  456-a.cpp  469-a  474-a  483-a.cpp  486-a.cpp  490-a.cpp  507429d  CF1-D12-A.cpp  CF143-D2-A  CF143-D2-A.cpp  CF287-D2-A  CF287-D2-A.cpp  CF404-D2-A  CF404-D2-A.cpp  CF520-D2-A.cpp  CF579-D2-A  CF579-D2-A.cpp  CF584-D2-A.cpp  CF682-D2-A  CF682-D2-A.cpp  CF707-D2-A  CF742-D2-A  CF766-D2-A.cpp  CF767-D2-A  CF767-D2-A.cpp  CF768-D2-A.cpp  CF785-D2-A  CF807-D2-A  CMakeLists.txt  (+22 more)
acpc_preperation/: leasons.cpp
acpc_preperation/sheet1/: a.cpp  b.cpp  c.cpp  d.cpp  e.cpp  f.cpp  g.cpp  h.cpp  i.cpp  j.cpp  k.cpp  tempCodeRunnerFile.cpp
acpc_preperation/sheet2/: a.cpp  b.cpp  c.cpp  d.cpp  e.cpp  f.cpp  g.cpp  h.cpp  i.cpp  j.cpp  k.cpp  l.cpp  m.cpp  n.cpp  o.cpp  p.cpp  q.cpp  r.cpp  s.cpp  t.cpp  u.cpp
codechef/: .C00K0FF.cpp.swp  AIRHOCKEY  AIRHOCKEY.cpp  ANKTRAIN.cpp  ANUUND  ANUUND.cpp  APPENDOR.cpp  ARRAYBREAK  ARRAYBREAK.cpp  ARRAYRET  ARRAYRET.cpp  AVG  AVG.cpp  BINTREE.cpp  BUY1GET1  BUY1GET1.cpp  C00K0FF  C00K0FF.cpp  CHEFGAMES  CHEFGAMES.cpp  CHNUM  CHNUM.cpp  DIGJUMP  DIGJUMP.cpp  EQUALIZEAB  EQUALIZEAB.cpp  ERROR  ERROR.cpp  FARAWAY  FARAWAY.cpp  FRIEZA  FRIEZA.cpp  LOKBIL.cpp  LUCKYFR  LUCKYFR.cpp  PERMUTATION  PERMUTATION.cpp  SPEEDTEST  SPEEDTEST.cpp  SPLITN  (+6 more)
codeforces/: 318-a.cpp  326175.cpp  339-a.cpp  41-a  41-a.cpp  43-a  43-a.cpp  456-a  469-a.cpp  474-a.cpp  483-a  483-a.cpp  486-a  490-a  507429  507429c.cpp  507429d.cpp  CF1-D12-A  CF102-D2-B  CF102-D2-B.cpp  CF129-D2-B  CF129-D2-B.cpp  CF143-D2-A  CF16-D2-B  CF16-D2-B.cpp  CF227-D2-B  CF227-D2-B.cpp  CF404-D2-A.cpp  CF451-D2-  CF451-D2-.cpp  CF463-D2-B  CF463-D2-B.cpp  CF47-D2-B  CF47-D2-B.cpp  CF486-D2-A  CF486-D2-A.cpp  CF514-D2-A  CF514-D2-A.cpp  CF520-D2-A  CF579-D2-A.cpp  (+45 more)
codingame/: c_1  c_1.cpp
go_solutions/main/: main.go
hackerearth/: dijkstras.cpp
hackerrank/: BalancedBrackets.cpp  QueueUsingTwoStacks.cpp  TextEditor.cpp  caesar-cipher.cpp  countingsort1.cpp  diagonal-difference.cpp  findMedian.cpp  flipping_the_mtrx.cpp  grid-challenge.cpp  lonely-integer.cpp  merge-two-sorted-linked-lists.cpp  mini-max-sum.cpp  new-year-chaos.cpp  recursive-digit-sum.cpp  time-conversion.cpp  truck_tour.cpp  zig-zag-sequence.cpp
interview_bit/: week.cpp
interview_bit/output/: week
interview_bit/output/week.dSYM/Contents/Resources/DWARF/: week
interview_bit/output/week.dSYM/Contents/Resources/Relocations/aarch64/: week.yml
interviews_perperation/: amazon.cpp  amazon_round_2.cpp  ibm.cpp  microsoft_problems.cpp  mouckup.cpp  noon.cpp  noon_round_2.cpp  raising_power.py  tempCodeRunnerFile.cpp
learning/: bfs_learning  bfs_learning.cpp  bfs_lle.py  dijkstras_learning  dijkstras_learning.cpp  dijkstras_learning_2  dijkstras_learning_2.cpp  graph  graph.cpp  main.py  manual.cpp  output.txt
leetcode/: 3sum.h  add-binary.cpp  add-two-numbers.h  average-of-levels-in-binary-tree.cpp  balanced-binary-tree.h  best-time-to-buy-and-sell-stock-ii.h  best-time-to-buy-and-sell-stock.h  binary-tree-inorder-traversal.cpp  binary-tree-inorder-traversal.h  climbing-stairs.cpp  come_back.cpp  common.h  container-with-most-water.h  convert-sorted-array-to-binary-search-tree.h  evaluate-reverse-polish-notation.h  excel-sheet-column-title.h  fibonacci-number.cpp  find-the-index-of-the-first-occurrence-in-a-string.cpp  general.cpp  intersection-of-two-linked-lists.h  invert-binary-tree.cpp  is-subsequence.cpp  island-perimeter.cpp  isomorphic-strings.h  jump-game-ii.h  jump-game.h  kth-largest-element-in-an-array.h  length-of-last-word.cpp  linked-list-cycle.h  longest-common-prefix.cpp  longest-palindromic-substring.h  longest-substring-without-repeating-characters.h  main.cpp  majority-element.h  maximum-depth-of-binary-tree.h  merge-intervals.cpp  merge-sorted-array.h  merge-two-binary-trees.cpp  merge-two-sorted-lists.cpp  min-cost-climbing-stairs.cpp  (+36 more)
leetcode/output/: come_back
leetcode/output/come_back.dSYM/Contents/: Info.plist
leetcode/output/come_back.dSYM/Contents/Resources/DWARF/: come_back
leetcode/output/come_back.dSYM/Contents/Resources/Relocations/aarch64/: come_back.yml
neetcode/: 3sum.cpp  best-time-to-buy-and-sell-stock.cpp  contains-duplicate.cpp  counting-bits.cpp  find-minimum-in-rotated-sorted-array.cpp  group-anagrams.cpp  house-robber-ii.cpp  house-robber.cpp  longest-consecutive-sequence.cpp  longest-repeating-character-replacement.cpp  longest-substring-without-repeating-characters.cpp  merge-two-sorted-lists.cpp  number-of-1-bits.cpp  oa_1.cpp  palindromic-substrings.cpp  product-of-array-except-self.cpp  reorder-list.cpp  reverse-linked-list.cpp  search-in-rotated-sorted-array.cpp  tempCodeRunnerFile.cpp  top-k-frequent-elements.cpp  two-sum.cpp
output/interview_bit/: week
output/interview_bit/week.dSYM/Contents/Resources/DWARF/: week
output/interview_bit/week.dSYM/Contents/Resources/Relocations/aarch64/: week.yml
tests/: README.md  test_framework.h  test_runner.cpp
tests/sample_tests/: come_back_test.cpp  example_test.cpp  sample_test_data.txt  test_data_format.md
tests/unit_tests/: common_test.cpp
