cmake_minimum_required(VERSION 3.27)
project(problem_solving)

set(CMAKE_CXX_STANDARD 14)

include_directories(leetcode)

add_executable(problem_solving
        acpc_preperation/sheet1/a.cpp
        acpc_preperation/sheet1/b.cpp
        acpc_preperation/sheet1/c.cpp
        acpc_preperation/sheet1/d.cpp
        acpc_preperation/sheet1/e.cpp
        acpc_preperation/sheet1/f.cpp
        acpc_preperation/sheet1/g.cpp
        acpc_preperation/sheet1/h.cpp
        acpc_preperation/sheet1/i.cpp
        acpc_preperation/sheet1/j.cpp
        acpc_preperation/sheet1/k.cpp
        acpc_preperation/sheet1/tempCodeRunnerFile.cpp
        codechef/AIRHOCKEY.cpp
        codechef/ANKTRAIN.cpp
        codechef/ANUUND.cpp
        codechef/APPENDOR.cpp
        codechef/ARRAYBREAK.cpp
        codechef/ARRAYRET.cpp
        codechef/AVG.cpp
        codechef/BINTREE.cpp
        codechef/BUY1GET1.cpp
        codechef/C00K0FF.cpp
        codechef/CHEFGAMES.cpp
        codechef/CHNUM.cpp
        codechef/DIGJUMP.cpp
        codechef/EQUALIZEAB.cpp
        codechef/ERROR.cpp
        codechef/FARAWAY.cpp
        codechef/FRIEZA.cpp
        codechef/LOKBIL.cpp
        codechef/LUCKYFR.cpp
        codechef/PERMUTATION.cpp
        codechef/SPEEDTEST.cpp
        codechef/SPLITN.cpp
        codechef/STICKBREAK.cpp
        codechef/tempCodeRunnerFile.cpp
        codechef/TRACE.cpp
        codechef/TREE2.cpp
        codeforces/219158.cpp
        codeforces/318-a.cpp
        codeforces/326175.cpp
        codeforces/339-a.cpp
        codeforces/382-a.cpp
        codeforces/41-a.cpp
        codeforces/43-a.cpp
        codeforces/443-a.cpp
        codeforces/456-a.cpp
        codeforces/469-a.cpp
        codeforces/474-a.cpp
        codeforces/483-a.cpp
        codeforces/486-a.cpp
        codeforces/490-a.cpp
        codeforces/507429c.cpp
        codeforces/507429d.cpp
        codeforces/_2_.cpp
        codeforces/__.cpp
        codeforces/___.cpp
        codeforces/a-270.cpp
        codeforces/a-282.cpp
        codeforces/a-296.cpp
        codeforces/CF1-D12-A.cpp
        codeforces/CF102-D2-B.cpp
        codeforces/CF129-D2-B.cpp
        codeforces/CF143-D2-A.cpp
        codeforces/CF16-D2-B.cpp
        codeforces/CF227-D2-B.cpp
        codeforces/CF287-D2-A.cpp
        codeforces/CF404-D2-A.cpp
        codeforces/CF451-D2-.cpp
        codeforces/CF463-D2-B.cpp
        codeforces/CF47-D2-B.cpp
        codeforces/CF486-D2-A.cpp
        codeforces/CF514-D2-A.cpp
        codeforces/CF520-D2-A.cpp
        codeforces/CF579-D2-A.cpp
        codeforces/CF584-D2-A.cpp
        codeforces/CF6-D2-B.cpp
        codeforces/CF66-D2-B..cpp
        codeforces/CF680-D2-B.cpp
        codeforces/CF682-D2-A.cpp
        codeforces/CF688-D2-B.cpp
        codeforces/CF707-D2-A.cpp
        codeforces/CF742-D2-A.cpp
        codeforces/CF746-D2-B.cpp
        codeforces/CF766-D2-A.cpp
        codeforces/CF766-D2-B.cpp
        codeforces/CF767-D2-A.cpp
        codeforces/CF768-D2-A.cpp
        codeforces/CF78-D2-B.cpp
        codeforces/CF785-D2-A.cpp
        codeforces/CF79-D12-B.cpp
        codeforces/CF80-D2-A.cpp
        codeforces/CF807-D2-A.cpp
        codeforces/CF810-D2-B.cpp
        codeforces/CNOTE.cpp
        codeforces/interview_hackerearch_question.cpp
        codeforces/LECANDY.cpp
        codeforces/pra.cpp
        "codeforces/SPOJ TOE1.cpp"
        codeforces/test.cpp
        codeforces/test2.cpp
        codeforces/uva_10106.cpp
        codingame/c_1.cpp
        hackerearth/dijkstras.cpp
        hackerrank/BalancedBrackets.cpp
        hackerrank/caesar-cipher.cpp
        hackerrank/countingsort1.cpp
        hackerrank/diagonal-difference.cpp
        hackerrank/findMedian.cpp
        hackerrank/flipping_the_mtrx.cpp
        hackerrank/grid-challenge.cpp
        hackerrank/lonely-integer.cpp
        hackerrank/merge-two-sorted-linked-lists.cpp
        hackerrank/mini-max-sum.cpp
        hackerrank/new-year-chaos.cpp
        hackerrank/palindrome.cpp
        hackerrank/QueueUsingTwoStacks.cpp
        hackerrank/recursive-digit-sum.cpp
        hackerrank/tempCodeRunnerFile.cpp
        hackerrank/TextEditor.cpp
        hackerrank/time-conversion.cpp
        hackerrank/truck_tour.cpp
        hackerrank/zig-zag-sequence.cpp
        interviews_perperation/microsoft_problems.cpp
        interviews_perperation/mouckup.cpp
        interviews_perperation/noon.cpp
        learning/bfs_learning.cpp
        learning/dijkstras_learning.cpp
        learning/dijkstras_learning_2.cpp
        learning/graph.cpp
        learning/manual.cpp
        leetcode/3sum.h
        leetcode/add-binary.cpp
        leetcode/add-two-numbers.h
        leetcode/average-of-levels-in-binary-tree.cpp
        leetcode/balanced-binary-tree.h
        leetcode/best-time-to-buy-and-sell-stock-ii.h
        leetcode/best-time-to-buy-and-sell-stock.h
        leetcode/binary-tree-inorder-traversal.cpp
        leetcode/binary-tree-inorder-traversal.h
        leetcode/climbing-stairs.cpp
        leetcode/common.h
        leetcode/container-with-most-water.h
        leetcode/convert-sorted-array-to-binary-search-tree.h
        leetcode/evaluate-reverse-polish-notation.h
        leetcode/excel-sheet-column-title.h
        leetcode/fibonacci-number.cpp
        leetcode/find-the-index-of-the-first-occurrence-in-a-string.cpp
        leetcode/intersection-of-two-linked-lists.h
        leetcode/invert-binary-tree.cpp
        leetcode/is-subsequence.cpp
        leetcode/island-perimeter.cpp
        leetcode/isomorphic-strings.h
        leetcode/jump-game-ii.h
        leetcode/jump-game.h
        leetcode/kth-largest-element-in-an-array.h
        leetcode/length-of-last-word.cpp
        leetcode/linked-list-cycle.h
        leetcode/longest-common-prefix.cpp
        leetcode/longest-palindromic-substring.h
        leetcode/longest-substring-without-repeating-characters.h
        leetcode/main.cpp
        leetcode/majority-element.h
        leetcode/maximum-depth-of-binary-tree.h
        leetcode/merge-intervals.cpp
        leetcode/merge-sorted-array.h
        leetcode/merge-two-binary-trees.cpp
        leetcode/merge-two-sorted-lists.cpp
        leetcode/min-cost-climbing-stairs.cpp
        leetcode/min-stack.h
        leetcode/minimum-absolute-difference-in-bst.cpp
        leetcode/minimum-depth-of-binary-tree.h
        leetcode/n-th-tribonacci-number.cpp
        leetcode/palindrome-number.cpp
        leetcode/pascals-triangle-ii.h
        leetcode/pascals-triangle.h
        leetcode/path-sum.h
        leetcode/plus-one.cpp
        leetcode/ransom-note.h
        leetcode/recover-binary-search-tree.cpp
        leetcode/remove-duplicates-from-sorted-array-ii.h
        leetcode/remove-duplicates-from-sorted-array.cpp
        leetcode/remove-duplicates-from-sorted-list.cpp
        leetcode/remove-element.cpp
        leetcode/reverse-integer.h
        leetcode/roman-to-integer.cpp
        leetcode/rotate-array.h
        leetcode/same-tree.cpp
        leetcode/search-in-rotated-sorted-array.h
        leetcode/search-insert-position.cpp
        leetcode/simplify-path.h
        leetcode/sqrtx.cpp
        leetcode/sum-of-left-leaves.cpp
        leetcode/summary-ranges.cpp
        leetcode/symmetric-tree.h
        leetcode/tempCodeRunnerFile.cpp
        leetcode/two-sum.h
        leetcode/valid-anagram.h
        leetcode/valid-palindrome.h
        leetcode/valid-parentheses.cpp
        leetcode/valid-sudoku.cpp
        leetcode/word-pattern.h
        leetcode/zigzag-conversion.h
        neetcode/3sum.cpp
        neetcode/best-time-to-buy-and-sell-stock.cpp
        neetcode/contains-duplicate.cpp
        neetcode/counting-bits.cpp
        neetcode/find-minimum-in-rotated-sorted-array.cpp
        neetcode/group-anagrams.cpp
        neetcode/house-robber-ii.cpp
        neetcode/house-robber.cpp
        neetcode/longest-consecutive-sequence.cpp
        neetcode/longest-palindromic-substring.cpp
        neetcode/longest-repeating-character-replacement.cpp
        neetcode/longest-substring-without-repeating-characters.cpp
        neetcode/merge-two-sorted-lists.cpp
        neetcode/number-of-1-bits.cpp
        neetcode/oa_1.cpp
        neetcode/palindromic-substrings.cpp
        neetcode/product-of-array-except-self.cpp
        neetcode/reorder-list.cpp
        neetcode/reverse-linked-list.cpp
        neetcode/search-in-rotated-sorted-array.cpp
        neetcode/tempCodeRunnerFile.cpp
        neetcode/top-k-frequent-elements.cpp
        neetcode/two-sum.cpp
        _____.cpp
        local.cpp
        tempCodeRunnerFile.cpp
        acpc_preperation/leasons.cpp
        acpc_preperation/sheet2/a.cpp
        acpc_preperation/sheet2/g.cpp
        acpc_preperation/sheet2/b.cpp
        acpc_preperation/sheet2/o.cpp
        acpc_preperation/sheet2/c.cpp
        acpc_preperation/leasons.cpp
        acpc_preperation/sheet2/d.cpp
        acpc_preperation/sheet2/i.cpp
        acpc_preperation/sheet2/m.cpp
        acpc_preperation/sheet2/n.cpp
        acpc_preperation/sheet2/p.cpp
        acpc_preperation/sheet2/t.cpp
        acpc_preperation/sheet2/e.cpp
        acpc_preperation/sheet2/f.cpp
        acpc_preperation/sheet2/r.cpp
        acpc_preperation/sheet2/h.cpp
        acpc_preperation/sheet2/j.cpp
        acpc_preperation/sheet2/u.cpp
        acpc_preperation/sheet2/q.cpp
        acpc_preperation/sheet2/l.cpp
        acpc_preperation/sheet2/s.cpp
        interviews_perperation/ibm.cpp
        leetcode/general.cpp
        interviews_perperation/amazon_round_2.cpp
        interviews_perperation/noon_round_2.cpp
)
